# trifly

./: CMakeLists.txt  Makefile  README.md  README.txt  example_graph.txt  machinefile
example_output/: global2.txt  local1.txt
src/: base_struct.hpp  io.cpp  io.hpp  macro.hpp  main.cpp  option.cpp  option.hpp  run.cpp  run.hpp  source.cpp  source.hpp  worker.cpp  worker.hpp
